# embedded

./: .gitignore  CMakeLists.txt  README.md
main/: CMakeLists.txt  main.c
main/Inc/: AppCore.h  board.h
workspace/: CMakeLists.txt
workspace/include/: board.h  umbrella_reminder_feature.h
workspace/include/src/: wifi_ap.h
workspace/src/: main.c  wifi_ap.c
workspace/web/: index.html  main.js  style.css
workspace/web/data/: address.json
